@@ -1,0 +1,24 @@
+<?php
+/*
+ * This file is a file with dummy php function to document the functions in
+ * the eAccelerator extension.
+ */
+
+/**
+ * Loader.
+ * The loader is needed when eaccelerator encoded scripts need to be
+ * executed. The encoder can be disabled with --without-eaccelerator-loader
+ * at compile time.
+ *
+ * @package eAccelerator
+ */
+
+/**
+ * Load an encode file.
+ * This function is available when eacelerator or the eloader extension is installed. 
+ * This function is used to load encoded php files. This functions is used by the 
+ * scripts that are outputed with enconder.php script in the source distribution.
+ */
+function eaccelerator_load () {}
+
+?>
